<resources>
    <string name="app_name">FriendsV2</string>
    <string name="name">Name: </string>
    <string name="detail">Detail</string>
    <string name="phone">Phone: </string>
    <string name="favorite">Favorite: </string>
    <string name="email">Email: </string>
    <string name="url">Url: </string>
    <string name="set_home">Set Home</string>
    <string name="map">Map</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
</resources>
